可以识别图片的部分EXIF信息了（只识别部分，我怕无用信息给输入tokens爆了）